--- a/src/home.html
+++ b/src/home.html
@@ -1,20 +1,28 @@
 <template>
   <section class="hero-container">
-      <div class="hero-content">
+    <div class="hero-content">
+      <div class="heading-container">
         <h1>${heading}</h1>
         <h4>${subheadingFirst}</h4>
         <h4>${subheadingSecond}</h4>
-        <div class="search-container">
-          <form role="form" submit.delegate="submit()">
-            <div class="form-group col-xs-4 search-item">
-              <input type="text" value.bind="find" class="form-control" id="find" placeholder="${findHint}">
-            </div>
-            <div class="form-group col-xs-4 search-item">
-              <input type="text" value.bind="near" class="form-control" id="near" placeholder="${location}">
-            </div>
-            <button type="submit" class="btn btn-success col-md-2 search-submit">Search</button>
-          </form>
-        </div>
       </div>
+      <div class="search-container">
+        <form class="form row" role="form" submit.delegate="submit()">
+          <div class="search-item form-group col-md-4">
+            <input id="find" type="text" class="form-control" value.bind="find" placeholder="${findHint}">
+          </div>
+          <div class="search-item form-group col-md-4">
+            <input id="near" type="text" class="form-control" value.bind="near" placeholder="${location}">
+          </div>
+          <div class="col-md-4">
+            <button type="submit" class="search-submit btn btn-success">Search</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <section class="other">
+    My other awesome stuff!
   </section>
 </template>
