--- a/src/home.html
+++ b/src/home.html
@@ -24,12 +24,13 @@
 
   <section class="suggestions-container">
     <div class="suggestions-menu">
-      <div class="row">
-        <div repeat.for="menuItem of menu" class="item col-md-2 ${menuItem.isActive ? 'active' : ''}">
-            <img src="${menuItem.image}"/>
-            <div class="title">${menuItem.name}</div>
-        </div>
-      </div>
+      <ul class="list-inline">
+        <li repeat.for="menuItem of menu" click.delegate="changeTab(elem.id)" id="${menuItem.id}">
+          <div class="image"><img src="${menuItem.image}" /></div>
+          <div class="title">${menuItem.name}</div>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <section class="au-animate">
