--- a/src/home.html
+++ b/src/home.html
@@ -12,7 +12,7 @@
             <input id="find" type="text" class="form-control" value.bind="find" placeholder="${findHint}">
           </div>
           <div class="search-item form-group col-md-4">
-            <input id="near" type="text" class="form-control" value.bind="near" placeholder="${location}">
+            <input id="near" type="text" class="form-control" value.bind="near" placeholder="${locationHint}">
           </div>
           <div class="form-group-btn col-md-4">
             <button type="submit" class="search-submit btn btn-success">Search</button>
@@ -25,7 +25,7 @@
   <section class="suggestions-container">
     <div class="suggestions-menu">
       <ul class="list-inline">
-        <li repeat.for="menuItem of menu" click.delegate="changeTab(elem.id)" id="${menuItem.id}">
+        <li repeat.for="menuItem of menu" click.delegate="changeMenuItem(menuItem)" id="${menuItem.id}">
           <div class="image"><img src="${menuItem.image}" /></div>
           <div class="title">${menuItem.name}</div>
         </li>
@@ -34,5 +34,27 @@
   </section>
 
   <section class="au-animate">
+    <div class="col-md-4" repeat.for="result of results">
+
+      <p>${result.venue.name}</p>
+
+      <!-- <div class='rate-card-container card-container-small'>
+        <div class='card-image'>
+          <h5 class="card--title">${business.name}</h5>
+          <span class="card-overlay"></span>
+          <img class="heroImage" src="" alt="" />
+          <img class="rate-card-reviewer card-container-small__review" src="${business.snippet_image_url}" alt="">
+        </div>
+        <p class="reviewer">User</p>
+        <div class="feature__caption">
+          <h6>What an Amazing Venue!
+          <ul>
+            <img width="100px" src="${business.rating_img_url_large}"/>
+          </ul>
+        </h6>
+          <p class="card-copy">${business.snippet_text}</p>
+        </div>
+      </div> -->
+    </div>
   </section>
 </template>
